Update for Trino 466 & simplify code