@@ -5,7 +5,6 @@ package com.github.robfromboulder.viewzoo;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Maps;
 import io.trino.spi.TrinoException;
@@ -25,7 +24,6 @@ import io.trino.spi.connector.ViewNotFoundException;
 import javax.inject.Inject;
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.HashMap;
@@ -38,37 +36,35 @@ import static com.google.common.collect.ImmutableList.toImmutableList;
 import static io.trino.spi.StandardErrorCode.ALREADY_EXISTS;
 import static io.trino.spi.StandardErrorCode.CONFIGURATION_INVALID;
 import static io.trino.spi.StandardErrorCode.GENERIC_INTERNAL_ERROR;
-import static io.trino.spi.StandardErrorCode.READ_ONLY_VIOLATION;
+import static io.trino.spi.StandardErrorCode.INVALID_ARGUMENTS;
 import static java.util.Objects.requireNonNull;
 
 public class ViewZooMetadata implements ConnectorMetadata {
 
-    public static final List<String> SCHEMA_NAMES = ImmutableList.of("example");
-
     @Inject
     public ViewZooMetadata(ViewZooConfig config) {
         this.config = requireNonNull(config, "config is null");
-        if (config.getViewsDir() != null) buildViews();
+        this.mapper = new ObjectMapper();
+        mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+        mapper.registerModule(new Jdk8Module());
+        if (config.getDir() != null) buildViews();
     }
 
     private final ViewZooConfig config;
+    private final ObjectMapper mapper;
     private final Map<SchemaTableName, ConnectorViewDefinition> views = new HashMap<>();
 
     private synchronized void buildViews() {
-        File dir = new File(config.getViewsDir());
+        File dir = new File(config.getDir());
         if (!dir.isDirectory() && !dir.mkdirs())
-            throw new TrinoException(CONFIGURATION_INVALID, "Unable to access directory: " + config.getViewsDir());
-
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-        mapper.registerModule(new Jdk8Module());
+            throw new TrinoException(CONFIGURATION_INVALID, "Unable to access directory: " + config.getDir());
 
         for (File f : Stream.of(requireNonNull(dir.listFiles())).filter(f -> !f.isHidden() && f.getName().endsWith(".json")).toList()) {
             try {
                 ConnectorViewDefinition def = mapper.readValue(f, ConnectorViewDefinition.class);
                 String filename = f.getName();
                 String[] name_pieces = filename.split("\\.");
-                if ((name_pieces.length == 3) && SCHEMA_NAMES.contains(name_pieces[0]) && name_pieces[2].equals("json"))
+                if ((name_pieces.length == 3) && name_pieces[2].equals("json"))
                     views.put(new SchemaTableName(name_pieces[0], name_pieces[1]), def);
             } catch (IOException e) {
                 throw new TrinoException(GENERIC_INTERNAL_ERROR, "Failed to read file: " + f);
@@ -77,44 +73,40 @@ public class ViewZooMetadata implements ConnectorMetadata {
     }
 
     @Override
-    public synchronized void createView(ConnectorSession session, SchemaTableName viewName, ConnectorViewDefinition definition, Map<String, Object> viewProperties, boolean replace) {
-        if (config.getViewsDir() == null)
+    public synchronized void createView(ConnectorSession session, SchemaTableName stn, ConnectorViewDefinition definition, Map<String, Object> viewProperties, boolean replace) {
+        if (config.getDir() == null)
             throw new TrinoException(CONFIGURATION_INVALID, "Not configured for persistent views");
 
-        String schema = viewName.getSchemaName();
-        if (!SCHEMA_NAMES.contains(schema)) {
-            throw new TrinoException(READ_ONLY_VIOLATION, "Schema is not writeable: " + viewName);
+        String schema = stn.getSchemaName();
+        String table = stn.getTableName();
+        if (schema.contains(".")) {
+            throw new TrinoException(INVALID_ARGUMENTS, "Invalid schema name: " + schema);
+        } else if (table.contains(".")) {
+            throw new TrinoException(INVALID_ARGUMENTS, "Invalid table name: " + table);
         } else if (replace) {
-            views.put(viewName, definition);
-        } else if (views.putIfAbsent(viewName, definition) != null) {
-            throw new TrinoException(ALREADY_EXISTS, "View already exists: " + viewName);
+            views.put(stn, definition);
+        } else if (views.putIfAbsent(stn, definition) != null) {
+            throw new TrinoException(ALREADY_EXISTS, "View already exists: " + stn);
         }
 
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new Jdk8Module());
         try {
-            String json = mapper.writeValueAsString(definition);
-            File f = new File(new File(config.getViewsDir()), schema + "." + viewName.getTableName() + ".json");
-            Files.write(Paths.get(f.toURI()), json.getBytes(StandardCharsets.UTF_8));
+            File f = new File(new File(config.getDir()), schema + "." + table + ".json");
+            Files.writeString(Paths.get(f.toURI()), mapper.writeValueAsString(definition));
         } catch (IOException e) {
             throw new TrinoException(GENERIC_INTERNAL_ERROR, e.getMessage());
         }
     }
 
     @Override
-    public synchronized void dropView(ConnectorSession session, SchemaTableName viewName) {
-        if (config.getViewsDir() == null)
+    public synchronized void dropView(ConnectorSession session, SchemaTableName stn) {
+        if (config.getDir() == null)
             throw new TrinoException(CONFIGURATION_INVALID, "Not configured for persistent views");
 
-        String schema = viewName.getSchemaName();
-        if (!SCHEMA_NAMES.contains(schema)) {
-            throw new TrinoException(READ_ONLY_VIOLATION, "Schema is not writeable: " + viewName);
-        } else if (views.remove(viewName) == null) {
-            throw new ViewNotFoundException(viewName);
-        }
+        String schema = stn.getSchemaName();
+        if (views.remove(stn) == null) throw new ViewNotFoundException(stn);
 
         try {
-            File f = new File(new File(config.getViewsDir()), schema + "." + viewName.getTableName() + ".json");
+            File f = new File(new File(config.getDir()), schema + "." + stn.getTableName() + ".json");
             Files.deleteIfExists(Paths.get(f.toURI()));
         } catch (IOException e) {
             throw new TrinoException(GENERIC_INTERNAL_ERROR, e.getMessage());
@@ -158,8 +150,8 @@ public class ViewZooMetadata implements ConnectorMetadata {
     }
 
     @Override
-    public List<String> listSchemaNames(ConnectorSession session) {
-        return SCHEMA_NAMES;
+    public synchronized List<String> listSchemaNames(ConnectorSession session) {
+        return views.keySet().stream().map(SchemaTableName::getSchemaName).collect(toImmutableList());
     }
 
     @Override
